--- a/contents/content2.html
+++ b/contents/content2.html
@@ -9,19 +9,38 @@
     <link rel="stylesheet" href="/static/css/MyFontsWebfontsKit.css">
     <script>
         (function(d) {
-          var config = {
-            kitId: 'wkc4gxv',
-            scriptTimeout: 3000,
-            async: true
-          },
-          h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+            var config = {
+                    kitId: 'wkc4gxv',
+                    scriptTimeout: 3000,
+                    async: true
+                },
+                h = d.documentElement,
+                t = setTimeout(function() {
+                    h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
+                }, config.scriptTimeout),
+                tk = d.createElement("script"),
+                f = false,
+                s = d.getElementsByTagName("script")[0],
+                a;
+            h.className += " wf-loading";
+            tk.src = 'https://use.typekit.net/' + config.kitId + '.js';
+            tk.async = true;
+            tk.onload = tk.onreadystatechange = function() {
+                a = this.readyState;
+                if (f || a && a != "complete" && a != "loaded") return;
+                f = true;
+                clearTimeout(t);
+                try {
+                    Typekit.load(config)
+                } catch (e) {}
+            };
+            s.parentNode.insertBefore(tk, s)
         })(document);
     </script>
     <style>
         /* body{
             background:url(../meet_bg.png) no-repeat left top;
         } */
-        
     </style>
     <script src="/static/js/jquery-3.1.0.min.js"></script>
     <script src="/static/js/jquery.validate.min.js"></script>
@@ -37,18 +56,20 @@
             '/static/img/uniroom/06.gif',
             '/static/img/uniroom/07.gif'
         ];
-        _PreLoadImg(arrPreloadSrcs, function () { });
+        _PreLoadImg(arrPreloadSrcs, function() {});
     </script>
 </head>
 
 <body>
     <div id="topbar">
         <div id="topbar-button">
-            <div id="topbar-home" class="topbar-item"><a href="/" rel="history">
+            <div id="topbar-home" class="topbar-item">
+                <a href="/" rel="history">
                     <p class="AntiqueOliveStd-Black hoverHide">Work</p>
                 </a>
             </div>
-            <div id="topbar-about" class="topbar-item"><a href="/about.html" rel="history">
+            <div id="topbar-about" class="topbar-item">
+                <a href="/about.html" rel="history">
                     <p class="AntiqueOliveStd-Black hoverHide">About</p>
                 </a>
             </div>
@@ -66,8 +87,7 @@
             <h1 class="page-title">Uniroom</h1>
 
             <div>
-                <p class="AntiqueOliveStd-Black" style="height: auto; max-height: none; min-height: 0px;">Advertising;
-                    Video; Animation</p>
+                <p class="AntiqueOliveStd-Black" style="height: auto; max-height: none; min-height: 0px;">Advertising; Video; Animation</p>
             </div>
             <div class="content-button">
                 <p class="AntiqueOliveStd-Black" style="height: auto; margin-top: 0.9375rem;">Project Info
@@ -81,50 +101,33 @@
 
         </div>
         <div class="content-des">
-            <p class="TimesLTPro-Roman">The animation is made for an LA based company called Uniroom, which is an online
-                marketplace and hospitality service for people to lease or rent the apartment for short and long term.
-                The video is created to explain how it works different and more convenient than the other similar
-                apartment rental companies.
+            <p class="TimesLTPro-Roman">The animation is made for an LA based company called Uniroom, which is an online marketplace and hospitality service for people to lease or rent the apartment for short and long term. The video is created to explain how it works different
+                and more convenient than the other similar apartment rental companies.
                 <br /><br />
             </p>
-            <p>
-                <small>这部动画广告是为洛杉矶一家名为Uniroom的公司制作的。Uniroom是一家线上酒店服务公司，为人们提供短期或长期租赁公寓的服务。这段视频解释了它是如何不同于其他类似的租赁公司，并且更方便。
+            <small>这部动画是为洛杉矶的<p class="TimesLTPro-Roman Inline">Uniroom</p>公司制作的广告。<p class="TimesLTPro-Roman Inline">Uniroom</p>是一家线上酒店服务公司，为人们提供短期或长期租赁公寓的服务。这段视频解释了它是如何提 供比其他类似的租赁公司更方便的服务。
+                    <br />* 如<p class="TimesLTPro-Roman Inline">Vimeo</p>无法播放，请点击此<a class="hoverHide" href="https://v.youku.com/v_show/id_XNDM2MDAyODA0MA==.html?spm=a2h3j.8428770.3416059.1" target="_blank">链接</a>，密码<p class="TimesLTPro-Roman Inline">uniroom2017</p>
                 </small>
-                <br /><br /><br/>
-            </p>
-        </div>
-
-
-        <div class="content-img wow fadeInUp">
-            <video controls="controls" autoplay="autoplay">
-                <source src="/static/video/demo.mp4" type="video/mp4" />
-                <source src="demo.ogg" type="video/ogg" />
-                <source src="demo.webm" type="video/webm" />
-                <object data="demo.mp4">
-                    <embed src="demo.swf" />
-                </object>
-            </video>
+            <br /><br /><br/>
         </div>
 
         <div class="content-img wow fadeInUp">
-            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/02.gif"
-                src="/static/img//uniroom/02.gif" alt="">
-            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/03.gif"
-                src="/static/img/uniroom/03.gif" alt="">
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/357139139?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
         </div>
 
         <div class="content-img wow fadeInUp">
-            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/04.gif"
-                src="/static/img/uniroom/04.gif" alt="">
-            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/05.gif"
-                src="/static/img/uniroom/05.gif" alt="">
+            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/02.gif" src="/static/img//uniroom/02.gif" alt="">
+            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/03.gif" src="/static/img/uniroom/03.gif" alt="">
         </div>
 
         <div class="content-img wow fadeInUp">
-            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/06.gif"
-                src="/static/img/uniroom/06.gif" alt="">
-            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/07.gif"
-                src="/static/img/uniroom/07.gif" alt="">
+            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/04.gif" src="/static/img/uniroom/04.gif" alt="">
+            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/05.gif" src="/static/img/uniroom/05.gif" alt="">
+        </div>
+
+        <div class="content-img wow fadeInUp">
+            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/06.gif" src="/static/img/uniroom/06.gif" alt="">
+            <img class="img-2-column wow fadeInUp" data-src="/static/img/uniroom/07.gif" src="/static/img/uniroom/07.gif" alt="">
         </div>
 
         <div class="content-nav wow fadeInUp">
@@ -147,15 +150,13 @@
     <div class="bottom">
         <div class="bottom-alt"></div>
         <div class="bottom-button">
-            <a href="https://www.instagram.com/formoj.studio/" target="_blank" class="wow fadeInUp"
-                data-wow-delay="0.1s">
+            <a href="https://www.instagram.com/formoj.studio/" target="_blank" class="wow fadeInUp" data-wow-delay="0.1s">
                 <div class="bottom-bg bottom-bg-1"></div>
             </a>
             <a id="wechat" class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="bottom-bg bottom-bg-2"></div>
             </a>
-            <a href="mailto:hello@formoj.studio?subject=test&amp;cc=抄送人邮箱&amp;subject=主题&amp;body=内容"
-                class="wow fadeInUp" data-wow-delay="0.3s">
+            <a href="mailto:hello@formoj.studio?subject=test&amp;cc=抄送人邮箱&amp;subject=主题&amp;body=内容" class="wow fadeInUp" data-wow-delay="0.3s">
                 <div class="bottom-bg bottom-bg-3"></div>
             </a>
         </div>
@@ -168,5 +169,6 @@
     </div>
 </body>
 <script src="/static/js/content.js"></script>
+<script src="https://player.vimeo.com/api/player.js"></script>
 
 </html>
